2012-12-12 3.0.1 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Fix spelling of Band-Realkatalog label

2012-12-11 3.0.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Add support for BRK authority records (Pica type »Tov«)
		* download the records and their corresponding hit counts
	* change naming scheme for downloaded XML files
	* default to tree style if no style is set in the FlexForm
	* refactoring to reduce memory footprint in database import scheduler task
	* introduce constants for repeatedly used strings
	* table change to store the record type instead of the »fromopac« flag
	* support hit counts for MSC matches from CSV files
	* take into account the $4 subfield when determining a record’s parent
	* avoid a few warning log messages coming from array functions
	* improve strings used in the backend interface
	* workaround for double-escaping bug in Pica XML output

2012-09-19 2.2.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Generalise hitcount analysis to enable recursive hitcounts for MSC and other classification systems

2012-08-06 2.1.1 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Fix jQuery vs IE problem with animations in menu display style
	* Fix HTML vs JavaScript escaping problem for … in menu display style

2012-07-27 2.1.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Change field names in Tev records according to the GND format
	* Add ability to start the tree with more than one element at the root level
	* Add option to omit subjects whose code ends with »XXX« (Flexform)

2012-06-01 2.0.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Clean up class structure.
	* Add option for column style display.
	* Reduce superfluous CSV file imports.
	* Drop TYPO3 4.5 compatibility

2012-02-22 1.6.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Make number of inline menu child elements configurable through the `menuInlineThreshold` TypoScript setting.

2012-01-27 1.5.0 Sven-S. Porst <porst@sub.uni-goettingen.de>