@@ -16,6 +16,7 @@ CREATE TABLE tx_nkwgok_data (
 	search text,
 	descr text,
 	descr_en text,
+	descr_alternate text,
 	tags text,
 	type varchar(255) DEFAULT '' NOT NULL,
 	parent varchar(255) DEFAULT '' NOT NULL,
